--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview --port 5050",
     "typecheck": "vue-tsc --noEmit",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint:stylelint": "stylelint --cache --fix {config,src}/**/*.{vue,css,scss,sass,less} --cache --cache-location node_modules/.cache/stylelint/"
   },
   "dependencies": {
     "pinia": "^2.0.11",
@@ -23,8 +24,16 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
+    "postcss": "^8.4.12",
+    "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
     "sass": "^1.49.10",
+    "stylelint": "^14.6.1",
+    "stylelint-config-html": "^1.0.0",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
     "vue-tsc": "^0.31.4"
