--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "stylelint-order": "^5.0.0",
     "typescript": "~4.5.5",
     "vite": "^2.8.4",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^0.31.4"
   },
   "lint-staged": {
