--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "release": "standard-version --preset gitmoji-config"
   },
   "dependencies": {
+    "element-plus": "^2.1.10",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
@@ -31,6 +32,7 @@
     "commitizen": "^4.2.4",
     "commitlint": "^16.2.3",
     "commitlint-config-cz": "^0.13.3",
+    "consola": "^2.15.3",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^6.3.0",
     "eslint": "^8.5.0",
@@ -49,8 +51,14 @@
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
     "typescript": "~4.5.5",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.8.4",
+    "vite-plugin-optimize-persist": "^0.1.2",
+    "vite-plugin-package-config": "^0.1.1",
+    "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
+    "vue-global-api": "^0.4.1",
     "vue-tsc": "^0.31.4"
   },
   "lint-staged": {
