--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ls-lint/ls-lint": "^1.11.0",
     "@rushstack/eslint-patch": "^1.1.0",
     "@types/node": "^16.11.25",
+    "@vitejs/plugin-legacy": "^1.8.1",
     "@vitejs/plugin-vue": "^2.2.2",
     "@vitejs/plugin-vue-jsx": "^1.3.7",
     "@vue/eslint-config-prettier": "^7.0.0",
