--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "release": "standard-version --preset gitmoji-config"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "element-plus": "^2.1.10",
     "pinia": "^2.0.13",
     "vue": "^3.2.33",
