--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
-    "element-plus": "^2.1.10",
+    "element-plus": "^2.2.0",
     "pinia": "^2.0.13",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
