--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "release": "standard-version --preset gitmoji-config"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.1",
     "axios": "^0.26.1",
     "element-plus": "^2.2.0",
     "pinia": "^2.0.13",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@iconify-json/ep": "^1.1.5",
     "@ls-lint/ls-lint": "^1.11.0",
     "@rushstack/eslint-patch": "^1.1.3",
     "@types/node": "^16.11.27",
@@ -56,6 +58,7 @@
     "stylelint-order": "^5.0.0",
     "typescript": "~4.5.5",
     "unplugin-auto-import": "^0.7.1",
+    "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
     "vite-plugin-optimize-persist": "^0.1.2",
